# snp-index

./: Cargo.toml  LICENSE  README.md
src/: README-md  genome.rs  index.rs  lib.rs  locus.rs  vcf.rs
src/read/: aligned_read.rs  mod.rs  refine.rs
tests/: scdata_integration.rs
